# assignment5-alignment

./: .gitignore  pyproject.toml  wget-log
cs336_alignment/: expert_iteration.py  grpo.ipynb  grpo.py  grpo_train.py  run_ei_exp.py  sft.ipynb  sft.py  vllm.ipynb
cs336_alignment/wandb/: latest-run
cs336_alignment/wandb/run-20251122_173914-codv9o5s/: run-codv9o5s.wandb
cs336_alignment/wandb/run-20251122_173914-codv9o5s/files/: config.yaml  wandb-metadata.json
cs336_alignment/wandb/run-20251122_173927-v451t7yl/files/: wandb-metadata.json
cs336_alignment/wandb/run-20251122_174003-vx21uxbl/: run-vx21uxbl.wandb
cs336_alignment/wandb/run-20251122_174003-vx21uxbl/files/: wandb-metadata.json
cs336_alignment/wandb/run-20251122_175615-n4rt19tm/: run-n4rt19tm.wandb
cs336_alignment/wandb/run-20251122_175615-n4rt19tm/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
cs336_alignment/wandb/run-20251122_183343-rvw3txeg/files/: wandb-metadata.json
cs336_alignment/wandb/run-20251122_183417-82p8qhij/: run-82p8qhij.wandb
cs336_alignment/wandb/run-20251122_183417-82p8qhij/files/: wandb-metadata.json
data/: download.ipynb
data/competition_math_dataset/train/: dataset_info.json  state.json
tests/: adapters.py  conftest.py  test_sft.py
